--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="1">
+    <!-- <meta http-equiv="Refresh" content="1"> -->
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
   </head>
