--- a/views/game_of_life.erb
+++ b/views/game_of_life.erb
@@ -1,5 +1,3 @@
-<pre>
-  <% @display.each do |row| %>
-    <div><%= row.join("") %></div>
-  <% end %>
-</pre>
+<% @display.each do |row| %>
+  <pre><%= row.join("") %></pre>
+<% end %>
