--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,7 @@
     <!-- <meta http-equiv="Refresh" content="1"> -->
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
+    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
   </head>
   <body>
     <div class="container-fluid">
