cool initial starting states are callable now with just an xy to start drawing the shape, ashley do your stylez

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <meta http-equiv="Refresh" content="1">
+    <meta http-equiv="Refresh" content=".005">
     <link href="css/bootstrap.min.css" type="text/css" rel="stylesheet" />
     <link href="css/bootstrap-responsive.min.css" type="text/css" rel="stylesheet"/>
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
