whatsup @ashleygwilliams aka ashley stylez aka queen of twitta aka manhattans latest exit aka brooklyns finest aka dumbo presodent aka clap for me

--- a/public/css/mystyle.css
+++ b/public/css/mystyle.css
@@ -1,4 +1,12 @@
-pre {
-  padding: 0px;
-  margin: 0px;
+td {
+  padding: 7px;
+  background-color:black;
+}
+
+.dead {
+  background-color:white;
+}
+
+table {
+  border-collapse:collapse;
 }
