convert styles to scss, randomize color

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta http-equiv="Refresh" content=".005">
-    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="/styles.css">
   </head>
   <body>
       <%= yield %>
